include/altdss/capi/dss.h

    /*! 
    Number of Conductors per Terminal
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumConductors(void);
    /*! 
    Number of Phases
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumPhases(void);
    /*! 
    Number of Terminals this Circuit Element
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_NumTerminals(void);
    /*! 
    Array of strings. Set Bus definitions for each terminal is connected.
    */
    ALTDSS_CAPI_DLL void CktElement_Set_BusNames(const char** ValuePtr, int32_t ValueCount);
    /*! 
    Complex array of currents into each conductor of each terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Currents(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Currents but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Currents_GR(void);
    /*! 
    Complex array of voltages at terminals
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Voltages(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Voltages but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Voltages_GR(void);
    /*! 
    Emergency Ampere Rating for PD elements
    */
    ALTDSS_CAPI_DLL double CktElement_Get_EmergAmps(void);
    /*! 
    Boolean indicating that element is currently in the circuit.
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_Enabled(void);
    /*! 
    Total losses in the element: two-element double array (complex), in VA (watts, vars)
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Losses(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Losses but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Losses_GR(void);
    /*! 
    Normal ampere rating for PD Elements
    */
    ALTDSS_CAPI_DLL double CktElement_Get_NormalAmps(void);
    /*! 
    Complex array of losses (kVA) by phase
    */
    ALTDSS_CAPI_DLL void CktElement_Get_PhaseLosses(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_PhaseLosses but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_PhaseLosses_GR(void);
    /*! 
    Complex array of powers (kVA) into each conductor of each terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Powers(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_Powers but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_Powers_GR(void);
    /*! 
    Double array of symmetrical component currents (magnitudes only) into each 3-phase terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqCurrents(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_SeqCurrents but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqCurrents_GR(void);
    /*! 
    Complex array of sequence powers (kW, kvar) into each 3-phase terminal
    */
    ALTDSS_CAPI_DLL void CktElement_Get_SeqPowers(double** ResultPtr, int32_t* ResultDims);