src/CAPI/CAPI_CktElement.pas


    Result := DSS_GetAsPAnsiChar(DSSPrime, elem.FullName);
end;
//------------------------------------------------------------------------------
function CktElement_Get_NumConductors(): Integer; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := 0;
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    Result := elem.NConds
end;
//------------------------------------------------------------------------------
function CktElement_Get_NumPhases(): Integer; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := 0;
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    Result := elem.NPhases
end;
//------------------------------------------------------------------------------
function CktElement_Get_NumTerminals(): Integer; CDECL;
var
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
    begin
        Result := 0;
        Exit;
    end;

    Result := elem.NTerms
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_BusNames(ValuePtr: PPAnsiChar; ValueCount: TAPISize); CDECL;
var
    Value: PPAnsiCharArray0;
    i: Integer;
    Count: Integer;
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    Value := PPAnsiCharArray0(ValuePtr);
    Count := ValueCount;
    if (Count <> elem.NTerms) AND (DSS_CAPI_EXT_ERRORS) then
    begin
        DoSimpleMsg(DSSPrime, 'The number of buses provided (%d) does not match the number of terminals (%d).', [ValueCount, Integer(elem.NTerms)], 97895);
        Exit;
    end;
    
    if Count > elem.NTerms then
        Count := elem.NTerms;
    for i := 1 to Count do
    begin
        elem.SetBus(i, Value[i - 1]);
    end;
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_Currents(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    elem: TDSSCktElement;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) then
        Exit;
        
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * (elem.NConds * elem.NTerms), elem.NConds, elem.NTerms);
    elem.GetCurrents(pComplexArray(Result));
end;

procedure CktElement_Get_Currents_GR(); CDECL;
// Same as CktElement_Get_Currents but uses global result (GR) pointers
begin
    CktElement_Get_Currents(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure CktElement_Get_Voltages(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// Bus Voltages at active terminal
var
    Result: PDoubleArray0;
    i, n, iV: Integer;
    Volts: Complex;
    elem: TDSSCktElement;
    NodeV: pNodeVArray;
begin
    // Return voltages for all terminals
    DefaultResult(ResultPtr, ResultCount);
    
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) or (elem.NodeRef = NIL) then
        Exit;

    NodeV := DSSPrime.ActiveCircuit.Solution.NodeV;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * (elem.NConds * elem.Nterms), elem.NConds, elem.Nterms);
    // k := (Terminal-1)*numcond;    // RCD 8-30-00 Changed
    iV := 0;
    for i := 1 to elem.NConds * elem.Nterms do
    begin
        n := elem.NodeRef[i];
        Volts := NodeV[n]; // ok if =0
        Result[iV] := Volts.re;
        Inc(iV);
        Result[iV] := Volts.im;
        Inc(iV);
    end;
end;

procedure CktElement_Get_Voltages_GR(); CDECL;
// Same as CktElement_Get_Voltages but uses global result (GR) pointers
begin
    CktElement_Get_Voltages(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
function CktElement_Get_EmergAmps(): Double; CDECL;
var
    elem: TDSSCktElement;
    pd: TPDElement;
begin
    Result := 0;
    
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    if not IsPDElement(elem) then
        Exit;

    pd := (elem as TPDElement);
    Result := pd.EmergAmps;
end;

//------------------------------------------------------------------------------
function CktElement_Get_Enabled(): TAPIBoolean; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := FALSE;
    
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    Result := elem.Enabled;
end;

//------------------------------------------------------------------------------
procedure CktElement_Get_Losses(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    LossValue: complex;
    elem: TDSSCktElement;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) then
        Exit;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
    LossValue := elem.Losses;
    Result[0] := LossValue.re;
    Result[1] := LossValue.im;
end;


procedure CktElement_Get_Losses_GR(); CDECL;
// Same as CktElement_Get_Losses but uses global result (GR) pointers
begin
    CktElement_Get_Losses(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
function CktElement_Get_NormalAmps(): Double; CDECL;
var
    elem: TDSSCktElement;
    pd: TPDElement;
begin
    Result := 0;
    
    if InvalidCktElement(DSSPrime, elem) then
        Exit;

    if not IsPDElement(elem) then
        Exit;

    pd := (elem as TPDElement);
    Result := pd.NormAmps;
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_PhaseLosses(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// Returns Phase losses in kW, kVar
var
    Result: PDoubleArray0;
    NValues, i: Integer;
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    NValues := elem.NPhases;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * NValues);
    elem.GetPhaseLosses(NValues, pComplexArray(Result));
    for i := 0 to (2 * NValues - 1) do
    begin
        Result[i] *= 0.001;
    end;
end;


procedure CktElement_Get_PhaseLosses_GR(); CDECL;
// Same as CktElement_Get_PhaseLosses but uses global result (GR) pointers
begin
    CktElement_Get_PhaseLosses(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure CktElement_Get_Powers(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// Return complex kW, kvar in each conductor for each terminal
var
    Result: PDoubleArray0;
    NValues,
    i: Integer;
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;

    NValues := elem.NConds * elem.Nterms;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * NValues, elem.NConds, elem.NTerms);
    elem.GetPhasePower(pComplexArray(ResultPtr));
    for i := 0 to (2 * NValues - 1) do
        Result[i] *= 0.001;
end;

procedure CktElement_Get_Powers_GR(); CDECL;
// Same as CktElement_Get_Powers but uses global result (GR) pointers
begin
    CktElement_Get_Powers(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_SeqCurrents(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// All sequence currents of active ciruit element
// returns magnitude only.
var
    Result: PDoubleArray0;
    i: Integer;
    i012: pComplexArray;
    S: String;
    elem: TDSSCktElement;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) or (not elem.Enabled) then
        Exit;

    try
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 3 * elem.NTerms, 3, elem.NTerms);

        i012 := Allocmem(sizeof(Complex) * 3 * elem.Nterms);
        // get complex seq voltages
        _CalcSeqCurrents(elem, i012);
        // return 0 based array
        for i := 1 to 3 * elem.Nterms do
            Result[i - 1] := Cabs(i012[i]);  // return mag only

        Reallocmem(i012, 0);  // throw away temp memory

    except
        On E: Exception do
        begin
            S := E.message + CRLF +
                'Element=' + elem.Name + CRLF +
                'Nphases=' + IntToStr(elem.Nphases) + CRLF +
                'NTerms=' + IntToStr(elem.NTerms) + CRLF +
                'NConds =' + IntToStr(elem.NConds);
            DoSimpleMsg(DSSPrime, S, 5012);
        end;
    end;
end;


procedure CktElement_Get_SeqCurrents_GR(); CDECL;
// Same as CktElement_Get_SeqCurrents but uses global result (GR) pointers
begin
    CktElement_Get_SeqCurrents(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure CktElement_Get_SeqPowers(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
// All seq Powers of active 3-phase circuit element
// returns kW + j kvar
var
    Result: PDoubleArray0;
    Nvalues, i, j, k, n, icount: Integer;
    S: Complex;
    VPh, V012: Complex3;
    IPh, I012: Complex3;
    cBuffer: pComplexArray;

    elem: TDSSCktElement;
    NodeV: pNodeVArray;
begin
    DefaultResult(ResultPtr, ResultCount);
    
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) or (elem.NodeRef = NIL) then // or (not elem.Enabled)
        Exit;

    NodeV := DSSPrime.ActiveCircuit.Solution.NodeV;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * 3 * elem.NTerms, 3, elem.NTerms); // allocate for kW and kvar
    if elem.NPhases <> 3 then
    begin
        if (elem.Nphases = 1) and DSSPrime.ActiveCircuit.PositiveSequence then
        begin
            NValues := elem.NConds * elem.NTerms;
            cBuffer := Allocmem(sizeof(Complex) * NValues);
            elem.GetCurrents(cBuffer);
            iCount := 2;  // Start with kW1
            // Put only phase 1 quantities in Pos seq
            for j := 1 to elem.NTerms do
            begin
                k := (j - 1) * elem.NConds;
                n := elem.NodeRef[k + 1];
                Vph[1] := NodeV[n];  // Get voltage at node
                S := Vph[1] * cong(cBuffer[k + 1]);   // Compute power per phase
                Result[icount] := S.re * 0.003; // 3-phase kW conversion
                inc(icount);
                Result[icount] := S.im * 0.003; // 3-phase kvar conversion
                inc(icount, 5);
            end;
            Reallocmem(cBuffer, 0);
        end
        else
            for i := 0 to 2 * 3 * elem.NTerms - 1 do
                Result[i] := -1.0;  // Signify n/A
    end
    else
    begin
        NValues := elem.NConds * elem.NTerms;
        cBuffer := Allocmem(sizeof(Complex) * NValues);
        elem.GetCurrents(cBuffer);
        icount := 0;
        for j := 1 to elem.NTerms do
        begin
            k := (j - 1) * elem.NConds;
            for i := 1 to 3 do
                Vph[i] := NodeV[elem.NodeRef[i + k]];
            for i := 1 to 3 do
                Iph[i] := cBuffer[k + i];
            Phase2SymComp(@Iph, @I012);
            Phase2SymComp(@Vph, @V012);
            for i := 1 to 3 do
            begin
                S := V012[i] * cong(I012[i]);
                Result[icount] := S.re * 0.003; // 3-phase kW conversion
                inc(icount);
                Result[icount] := S.im * 0.003; // 3-phase kvar conversion
                inc(icount);
            end;
        end;
        Reallocmem(cBuffer, 0);
    end;
end;

